# Spotify-recommendation-project

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  analysis.ipynb  favorites_analysis.ipynb  jupyter  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
analysis/: analysis.ipynb  favorites_analysis.ipynb
spotirecs/: __init__.py  models.py  utils.py
spotirecs/cmd/: cli.py
spotirecs/plotting/: __init__.py  features.py
src/: test.py
