[tool.poetry]
name = "spotirecs"
version = "0.1.0"
description = "Spotify Recommendations"
authors = ["AndersBennedsgaard <abbennedsgaard@gmail.com>"]
maintainers = ["AndersBennedsgaard <abbennedsgaard@gmail.com>"]
license = "MIT"
readme = "README.md"
repository="https://github.com/AndersBennedsgaard/Spotify-recommendation-project"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.1"
requests = "^2.31.0"
spotipy = "^2.23.0"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
pydantic = "^2.6.4"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pytest = "^8.1.1"
black = "^24.3.0"
jupyterlab = "^4.1.5"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
