[tool.poetry]
name = "spotirecs"
version = "0.1.0"
description = "Spotify Recommendations"
authors = ["AndersBennedsgaard <abbennedsgaard@gmail.com>"]
maintainers = ["AndersBennedsgaard <abbennedsgaard@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AndersBennedsgaard/Spotify-recommendation-project"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.1"
requests = "^2.31.0"
spotipy = "^2.23.0"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
pydantic = "^2.6.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
jupyterlab = "^4.1.5"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [tool.ruff]
# extend-include = ["*.ipynb"]
